# doglog

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/src/doglog_backend/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/src/doglog_backend/routers/: users.py
backend/src/doglog_backend/tests/: test_users.py
webfrontend/: index.html  package.json  pnpm-lock.yaml
webfrontend/src/: App.tsx  endpoints.ts  index.css
webfrontend/src/signup/: index.tsx  signup.module.css
